; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-io.c_video_input_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-io.c_video_input_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_input = type { i32, i32* }

@MAX_CONVERT_BUFFERS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.video_input*)* @video_input_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @video_input_free(%struct.video_input* %0) #0 {
  %2 = alloca %struct.video_input*, align 8
  %3 = alloca i64, align 8
  store %struct.video_input* %0, %struct.video_input** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @MAX_CONVERT_BUFFERS, align 8
  %7 = icmp ult i64 %5, %6
  br i1 %7, label %8, label %18

8:                                                ; preds = %4
  %9 = load %struct.video_input*, %struct.video_input** %2, align 8
  %10 = getelementptr inbounds %struct.video_input, %struct.video_input* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = call i32 @video_frame_free(i32* %13)
  br label %15

15:                                               ; preds = %8
  %16 = load i64, i64* %3, align 8
  %17 = add i64 %16, 1
  store i64 %17, i64* %3, align 8
  br label %4

18:                                               ; preds = %4
  %19 = load %struct.video_input*, %struct.video_input** %2, align 8
  %20 = getelementptr inbounds %struct.video_input, %struct.video_input* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @video_scaler_destroy(i32 %21)
  ret void
}

declare dso_local i32 @video_frame_free(i32*) #1

declare dso_local i32 @video_scaler_destroy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
